osd: Fix stale scrub stats when a primary takes over

Fixes: http://tracker.ceph.com/issues/23267

Signed-off-by: David Zafman <dzafman@redhat.com>
(cherry picked from commit 5cfb8241f482ed53c63bb97262425b2acb733d7d)

Conflicts:
	src/osd/PG.cc (trivial)
	test/Makefile.am (Add to make check for Jewel)
	test/osd/CMakeLists.txt (Add to make check for Jewel)
	src/test/osd/osd-scrub-test.sh (from qa/standalone/scrub/osd-scrub-test.sh)
	  Different location of ceph-helpers.sh
	  No manager so remove run_mgr
	  Remove default rbd pool
	  Use 4 OSDs because remapped PG doesn't go clean